@@ -13,7 +13,7 @@ AM_SILENT_RULES([yes])
 
 AC_PROG_CC
 
-
+GLIB_GSETTINGS
 
 
 LT_INIT
