@@ -1,0 +1,40 @@
+<schemalist>
+  <schema path="/org/agronick/relay/" id="org.agronick.relay">
+
+    <key name="show-animations" type="b">
+      <default>true</default>
+    </key>
+    <key name="show-join" type="b">
+      <default>false</default>
+    </key>
+    <key name="show-sidebar" type="b">
+      <default>false</default>
+    </key>
+    <key name="open-server" type="b">
+      <default>true</default>
+    </key>
+    <key name="show-datestamp" type="b">
+      <default>true</default>
+    </key>
+    <key name="change-tab" type="b">
+      <default>true</default>
+    </key>
+
+    <key name="user-self-color" type="s">
+      <default>"default"</default>
+    </key>
+    <key name="user-other-color" type="s">
+      <default>"default"</default>
+    </key>
+    <key name="message-color" type="s">
+      <default>"default"</default>
+    </key>
+    <key name="link-color" type="s">
+      <default>"default"</default>
+    </key>
+    <key name="timestamp-color" type="s">
+      <default>"default"</default>
+    </key>
+
+  </schema>
+</schemalist>
