@@ -26,7 +26,10 @@ appicondir = $(datadir)/icons/hicolor/scalable/apps
 appicon_DATA = ui/relay.png
 
 desktopdir = $(datadir)/applications
-desktop_DATA = ../relay.desktop
+desktop_DATA = ../data/relay.desktop
+
+gsettings_SCHEMAS = ../data/org.agronick.relay.gschema.xml
+@GSETTINGS_RULES@
 
 AM_CPPFLAGS = \
     -DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
@@ -52,17 +55,17 @@ relay_SOURCES = \
     relay.vala \
     connection.vala \
     rich_text.vala \
-    drag_file.vala
+    drag_file.vala \
+    org.github.agronick.relay \
+    settings.vala
 
 relay_VALAFLAGS =  \
-    -X -DGETTEXT_PACKAGE="relay" --target-glib 2.32  --pkg gee-0.8 --pkg x11 --pkg gtk+-3.0 --pkg glib-2.0 --pkg granite --pkg sqlite3
+    -X -DGETTEXT_PACKAGE="relay" --target-glib 2.32  --pkg gee-0.8 --pkg x11 --pkg gtk+-3.0 --pkg glib-2.0 --pkg granite --pkg sqlite3 --save-temps -g 
 
 relay_LDFLAGS = \
-	 -lm -lX11 -lglib-2.0 -Wl,--as-needed
+	 -lm -lX11 -lglib-2.0 -Wl,--as-needed -w
 
 relay_LDADD = -lm -lX11 $(RELAY_LIBS)
- 
-
 
 EXTRA_DIST = $(ui_DATA) $(assets_DATA)
 
