@@ -96,15 +96,18 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="settings_btn">
+                    <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="no_show_all">True</property>
+                    <property name="halign">end</property>
+                    <property name="valign">end</property>
                     <property name="margin_top">4</property>
                     <property name="image">image1</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
+                    <property name="pack_type">end</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
