@@ -1,3 +1,8 @@
+2015-07-14  Kyle Agronick  <agronick@gmail.com>
+
+    Added settings and color picking
+    Bug fixes
+
 2015-07-08  Kyle Agronick  <agronick@gmail.com>
 
     Added integration with Hastebin
